# MacroNet

./: .pdm-python  .pypirc  CHANGELOG.md  README.ipynb  README.md  README_zh.html  README_zh.ipynb  README_zh.md  Untitled.ipynb  __init__.py  a.ipynb  fig.pptx  flowfunc.py  m.md  monet.py  net.md  paper.docx  pyproject.toml  test_MoNet.ipynb  test_guild.ipynb  ~$paper.docx  ~WRL3066.tmp
.ipynb_checkpoints/: README-checkpoint.ipynb
DeNet/: denet.py  test_denet.ipynb
DefUp/: defup.py  test_denet.ipynb
data/aaindex/: aaindex_aa.csv  aaindex_json.csv  aaindex_json.tsv  aaindex_mat.csv
image/README/: 1700833648052.xml
old/: .gitignore  CHANGELOG.md  __init__.py  define.py  test_denet.ipynb
src/MacroNet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/MoNet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/macronet/: _monet.py  base.py  example.py  flowfunc.py  torch_ddf.py
src/monet/: __init__.py  _monet.py  base.py  defdef.py  denet.py  example.py  flowfunc.py  monet.py  torch_ddf.py
tests/: test_MoNet.ipynb  test_MoNet2.ipynb  test_denet.ipynb  test_flowfunc.ipynb  test_guild.ipynb
