[project]
name = "MoNet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hn3ng4n@163.com", email = "hn3ng4n@qq.com"},
    {name = "yf_ming", email = "yf_ming@csu.edu.cn"},
    {name = "'明泳帆'", email = "'yf_ming@csu.edu.cn'"},
]
dependencies = [
    "skorch>=0.15.0",
    "torch==2.2.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "numpy>=1.26.4",
    "pip>=24.0",
]
[tool.pdm.resolution]
respect-source-order = true